--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,9 @@ jobs:
 #       直接判断执行条件
       if: github.event_name != 'schedule'                   
       run: |
-        python3 down_fans_ob.py
+        python3 down_fans_biliob.py
         echo "============华丽的分割线==========="
-        python3 up_fans_ob.py
+        python3 up_fans_biliob.py
       
     - name: 获取指定数据
       if: github.event_name == 'schedule'
