--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,19 +42,21 @@ jobs:
 #       判断types方式
       # if: github.event.action != 'started'
 #       直接判断执行条件
-      if: github.event_name != 'schedule'                   
+      if: github.event_name == 'schedule'                   
       run: |
         python3 down_fans_biliob.py
         echo "============华丽的分割线==========="
         python3 up_fans_biliob.py
       
     - name: 获取指定数据
-      if: github.event_name == 'schedule'
+      if: github.event_name != 'schedule'
       env:
         date_start: ${{ github.event.inputs.date_start }}
         fans_type: ${{ github.event.inputs.fans_type }}
       run: |
+        rm -rf temp/ && mkdir temp
         python3 get_fans.py
+        tar -zcvf temp.tar.gz temp/
         
     - name: 上传
       run: |
