--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,7 @@ jobs:
         python3 get_fans.py
         tar -zcvf temp.tar.gz temp/
         
+        
     - name: 上传
       run: |
         git config --local user.email "19820637553@163.com"
@@ -66,6 +67,29 @@ jobs:
         git commit -m "`date '+%Y-%m-%d %H:%M:%S'`"
         git push -u origin main && echo "push ok"
         
+        
+    - name: sync github -> gitee
+      if: success()
+      uses: Yikun/hub-mirror-action@master  
+#       if: env.dst_key && env.dst_token && env.gitee_user
+      with:
+        # 必选，需要同步的 Github 用户（源）
+        src: 'github/${{ github.repository_owner }}'
+        # 必选，需要同步到的 Gitee 用户（目的）
+        dst: 'gitee/shaunpan'
+        # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
+        dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+        # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
+        dst_token:  ${{ secrets.GITEE_TOKEN }}
+        # 如果是组织，指定组织即可，默认为用户 user
+        # account_type: org
+        # 直接取当前项目的仓库名
+        static_list: ${{ github.event.repository.name }}
+        # 还有黑、白名单，静态名单机制，可以用于更新某些指定库
+        # static_list: 'repo_name,repo_name2'
+        # black_list: 'repo_name,repo_name2'
+        # white_list: 'repo_name,repo_name2'      
+
     - name: 'Send mail'
       if: success()
       uses: dawidd6/action-send-mail@master
