--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
 #   pull_request:
 #     branches: [ master ]
   schedule:
-    - cron: 20 3 * * *
+    - cron: 3 * * * *
   watch:
     types: started
   workflow_dispatch:
