--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
 #       判断types方式
       # if: github.event.action != 'started'
 #       直接判断执行条件
-      if: github.event_name == 'schedule'                   
+      if: github.event_name != 'workflow_dispatch'                   
       run: |
         python3 down_fans_biliob.py
         echo "============华丽的分割线==========="
