--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,7 +91,7 @@ jobs:
         # white_list: 'repo_name,repo_name2'      
 
     - name: 'Send mail'
-      if: success()
+      if: failure()
       uses: dawidd6/action-send-mail@master
       with:
         server_address: smtp.qq.com
